[package]
name = "rustlette"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql-parser = "0.4"
bson = "2.13.0"
handlebars = "6.2.0"
mongodb = "3.1.0"
async-graphql = "7.0.13"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "1.6.1"